--- a/src/index.css
+++ b/src/index.css
@@ -1,124 +1,76 @@
-/* mobile-first design */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(#0e1b58, #f09fd0);
+}
+.container-fluid {
+  background: url(./stars.png) repeat-x;
+  animation: slide 30s linear infinite;
+}
 
-/* @media (max-width: 599px) {
-  html,
-  body {
+h1 {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  font-size: 60pt;
+  color: #ff91d3;
+}
+
+h2 {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  font-size: 40pt;
+  margin-bottom: 40pt;
+}
+
+h3 {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  font-size: 30pt;
+}
+
+h4 {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  font-size: 20pt;
+}
+
+p {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  margin-left: 220px;
+  margin-right: 220px;
+}
+
+@keyframes slide {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -400px 0;
   }
 }
 
-@media (min-width: 600px) {
-  html,
-  body {
-  }
+.navbar a {
+  font-family: "Exo", sans-serif;
 }
 
-@media (min-width: 900px) {
-  html,
-  body {
-  }
-} */
-
-@media (min-width: 1200px) {
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    background-image: linear-gradient(#0e1b58, #f09fd0);
-  }
-  .hero-bkg-animated {
-    background: url(./stars.png) repeat-x;
-    padding-top: 60px;
-    animation: slide 30s linear infinite;
-  }
-
-  h1 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 60pt;
-    color: #ff91d3;
-  }
-
-  h2 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 40pt;
-  }
-
-  h3 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 30pt;
-  }
-
-  h4 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 20pt;
-  }
-
-  .hero-bkg-animated p {
-    font-family: "Exo", sans-serif;
-    padding: 10px;
-    margin: 200px;
-    text-align: justify;
-  }
-
-  @keyframes slide {
-    from {
-      background-position: 0 0;
-    }
-    to {
-      background-position: -400px 0;
-    }
-  }
-
-  .nav {
-    display: flex;
-    justify-content: center;
-  }
-
-  .nav a {
-    font-family: "Exo", sans-serif;
-    font-size: 30px;
-    color: #0e1b58;
-    text-decoration: none;
-    background-color: #ffffffa4;
-    border: 2px solid #ffffffa4;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 8px;
-  }
-
-  .nav li {
-    display: inline;
-    padding: 10px 20px;
-    border-radius: 5px;
-  }
-
-  /* .footer {
-  } */
-
-  /* .footerleft {
-  } */
-
-  /* .footerright {
-  } */
-
-  .logo {
-    width: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .logocontainer {
-    margin: 0 auto;
-    position: absolute;
-  }
+.logo {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* @media (min-width: 1800px) {
-  html,
-  body {
-  }
-} */
+.logocontainer {
+  margin: 0 auto;
+  position: absolute;
+}
+
+.footerleft {
+  margin-left: -20px;
+}
+
+.footerright {
+  margin-right: -20px;
+}
