--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ p {
   margin-right: -20px;
 }
 
-.avatar {
-  border-radius: 50%;
-  width: 100px;
+.teamPhoto {
+  margin: -20px;
+  height: 400px;
 }
