--- a/src/index.css
+++ b/src/index.css
@@ -1,82 +1,293 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  background-image: linear-gradient(#0e1b58, #f09fd0);
-}
-.container-fluid {
-  background: url(./stars.png) repeat-x;
-  animation: slide 30s linear infinite;
-}
-
-h1 {
-  font-family: "Exo", sans-serif;
-  text-align: center;
-  font-size: 60pt;
-  color: #ff91d3;
-}
-
-h2 {
-  font-family: "Exo", sans-serif;
-  text-align: center;
-  font-size: 40pt;
-  margin-bottom: 40pt;
-}
-
-h3 {
-  font-family: "Exo", sans-serif;
-  text-align: center;
-  font-size: 30pt;
-}
-
-h4 {
-  font-family: "Exo", sans-serif;
-  text-align: center;
-  font-size: 20pt;
-}
-
-p {
-  font-family: "Exo", sans-serif;
-  text-align: center;
-  margin-left: 220px;
-  margin-right: 220px;
-  color: #ff91d3;
-}
-
-@keyframes slide {
-  from {
-    background-position: 0 0;
+@media (max-width: 749px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(#0e1b58, #f09fd0);
   }
-  to {
-    background-position: -400px 0;
+  .container-fluid {
+    background: url(./stars.png) repeat-x;
+    animation: slide 30s linear infinite;
+  }
+
+  h1 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 60pt;
+    color: #ff91d3;
+  }
+
+  h2 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 40pt;
+    margin-bottom: 60pt;
+    color: #ff91d3;
+  }
+
+  h3 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 30pt;
+    color: #ff91d3;
+  }
+
+  h4 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 20pt;
+    color: #ff91d3;
+  }
+
+  p {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    max-width: 750px;
+    color: #ff91d3;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+
+  @keyframes slide {
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: -400px 0;
+    }
+  }
+
+  .navbar a {
+    font-family: "Exo", sans-serif;
+  }
+
+  .logo {
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .logocontainer {
+    margin: 0 auto;
+    position: absolute;
+  }
+
+  .footerleft {
+    margin-left: -20px;
+  }
+
+  .footerright {
+    margin-right: -20px;
+  }
+
+  .teamPhoto {
+    margin: -20px;
+    height: 400px;
+  }
+
+  th,
+  td {
+    color: #ff91d3;
+  }
+
+  .icon {
+    border-radius: 10px;
   }
 }
 
-.navbar a {
-  font-family: "Exo", sans-serif;
+@media (min-width: 750px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(#0e1b58, #f09fd0);
+  }
+  .container-fluid {
+    background: url(./stars.png) repeat-x;
+    animation: slide 30s linear infinite;
+  }
+
+  h1 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 60pt;
+    color: #ff91d3;
+  }
+
+  h2 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 40pt;
+    margin-bottom: 60pt;
+    color: #ff91d3;
+  }
+
+  h3 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 30pt;
+    color: #ff91d3;
+  }
+
+  h4 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 20pt;
+    color: #ff91d3;
+  }
+
+  p {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    max-width: 750px;
+    color: #ff91d3;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+
+  @keyframes slide {
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: -400px 0;
+    }
+  }
+
+  .navbar a {
+    font-family: "Exo", sans-serif;
+  }
+
+  .logo {
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .logocontainer {
+    margin: 0 auto;
+    position: absolute;
+  }
+
+  .footerleft {
+    margin-left: -20px;
+  }
+
+  .footerright {
+    margin-right: -20px;
+  }
+
+  .teamPhoto {
+    margin: -20px;
+    height: 400px;
+  }
+
+  th,
+  td {
+    color: #ff91d3;
+  }
+
+  .icon {
+    border-radius: 10px;
+  }
 }
 
-.logo {
-  width: 300px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+@media (min-width: 1199px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(#0e1b58, #f09fd0);
+  }
+  .container-fluid {
+    background: url(./stars.png) repeat-x;
+    animation: slide 30s linear infinite;
+  }
 
-.logocontainer {
-  margin: 0 auto;
-  position: absolute;
-}
+  h1 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 60pt;
+    color: #ff91d3;
+  }
 
-.footerleft {
-  margin-left: -20px;
-}
+  h2 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 40pt;
+    margin-bottom: 60pt;
+    color: #ff91d3;
+  }
 
-.footerright {
-  margin-right: -20px;
-}
+  h3 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 30pt;
+    color: #ff91d3;
+  }
 
-.teamPhoto {
-  margin: -20px;
-  height: 400px;
+  h4 {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    font-size: 20pt;
+    color: #ff91d3;
+  }
+
+  p {
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    max-width: 750px;
+    color: #ff91d3;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+
+  @keyframes slide {
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: -400px 0;
+    }
+  }
+
+  .navbar a {
+    font-family: "Exo", sans-serif;
+  }
+
+  .logo {
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .logocontainer {
+    margin: 0 auto;
+    position: absolute;
+  }
+
+  .footerleft {
+    margin-left: -20px;
+  }
+
+  .footerright {
+    margin-right: -20px;
+  }
+
+  .teamPhoto {
+    margin: -20px;
+    height: 400px;
+  }
+
+  th,
+  td {
+    color: #ff91d3;
+  }
+
+  .icon {
+    border-radius: 10px;
+  }
 }
