--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @media (max-width: 749px) {
   html,
   body {
-    margin: 0;
-    padding: 0;
     background-image: linear-gradient(#0e1b58, #f09fd0);
+    font-family: "Exo", sans-serif;
   }
   .container-fluid {
     background: url(./stars.png) repeat-x;
@@ -19,44 +18,40 @@
   }
 
   .rounded {
-    height: 100px;
+    height: 50px;
   }
 
   h1 {
-    font-family: "Exo", sans-serif;
     text-align: center;
-    font-size: 60pt;
+    font-size: 40pt;
     color: #ff91d3;
   }
 
   h2 {
-    font-family: "Exo", sans-serif;
     text-align: center;
-    font-size: 40pt;
-    margin-bottom: 60pt;
+    font-size: 30pt;
     color: #ff91d3;
   }
 
   h3 {
-    font-family: "Exo", sans-serif;
     text-align: center;
     font-size: 30pt;
     color: #ff91d3;
   }
 
   h4 {
-    font-family: "Exo", sans-serif;
     text-align: center;
     font-size: 20pt;
     color: #ff91d3;
   }
 
   p {
-    font-family: "Exo", sans-serif;
     text-align: center;
     max-width: 750px;
     color: #ff91d3;
     margin: 0 auto;
+    margin-left: 50px;
+    margin-right: 50px;
     margin-bottom: 30px;
   }
 
@@ -69,20 +64,11 @@
     }
   }
 
-  .navbar a {
-    font-family: "Exo", sans-serif;
-  }
-
   .logo {
-    width: 300px;
+    width: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .logocontainer {
-    margin: 0 auto;
-    position: absolute;
   }
 
   .footerleft {
@@ -94,6 +80,7 @@
   }
 
   .teamPhoto {
+    padding-top: 20px;
     margin: -20px;
     height: 200px;
   }
@@ -104,24 +91,11 @@
   }
 
   .icon {
-    border-radius: 10px;
-  }
-
-  .footer p {
-    color: #000000;
-    position: inherit;
+    border-radius: 20px;
   }
 
   .footer img {
-    width: 300px;
-  }
-
-  .footerleft {
-    margin-left: -20px;
-  }
-
-  .footerright {
-    margin-right: -20px;
+    width: 200px;
   }
 }
 
