--- a/src/index.css
+++ b/src/index.css
@@ -1,295 +1,112 @@
-@media (max-width: 749px) {
-  html,
-  body {
-    background-image: linear-gradient(#0e1b58, #f09fd0);
-    font-family: "Exo", sans-serif;
-  }
-  .container-fluid {
-    background: url(./stars.png) repeat-x;
-    animation: slide 30s linear infinite;
-  }
+html,
+body {
+  background-image: linear-gradient(#0e1b58, #f09fd0);
+  font-family: "Exo", sans-serif;
+}
 
-  .container {
-    margin: 3em;
-  }
+a {
+  text-decoration: none;
+  color: #121f5c;
+}
 
-  .container p {
-    color: #0e1b58;
-  }
+a:hover {
+  text-decoration: none;
+  border: 3px;
+  border-style: solid;
+  border-color: #ff91d3;
+}
 
-  .rounded {
-    height: 50px;
-  }
+.container-fluid {
+  background: url(./stars.png) repeat-x;
+  animation: slide 30s linear infinite;
+}
 
-  h1 {
-    text-align: center;
-    font-size: 40pt;
-    color: #ff91d3;
-  }
+.container {
+  margin: 3em;
+  border: 5px #000000;
+}
 
-  h2 {
-    text-align: center;
-    font-size: 30pt;
-    color: #ff91d3;
-  }
+.container p {
+  color: #0e1b58;
+}
 
-  h3 {
-    text-align: center;
-    font-size: 30pt;
-    color: #ff91d3;
-  }
+.rounded {
+  height: 50px;
+}
 
-  h4 {
-    text-align: center;
-    font-size: 20pt;
-    color: #ff91d3;
-  }
+h1 {
+  text-align: center;
+  font-size: 40pt;
+  color: #ff91d3;
+}
 
-  p {
-    text-align: center;
-    max-width: 750px;
-    color: #ff91d3;
-    margin: 0 auto;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 30px;
-  }
+h2 {
+  text-align: center;
+  font-size: 30pt;
+  color: #ff91d3;
+}
 
-  @keyframes slide {
-    from {
-      background-position: 0 0;
-    }
-    to {
-      background-position: -400px 0;
-    }
-  }
+h3 {
+  text-align: center;
+  font-size: 30pt;
+  color: #ff91d3;
+}
 
-  .logo {
-    width: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+h4 {
+  text-align: center;
+  font-size: 20pt;
+  color: #ff91d3;
+}
 
-  .footerleft {
-    margin-left: -20px;
-  }
+p {
+  text-align: center;
+  max-width: 750px;
+  color: #ff91d3;
+  margin: 0 auto;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 30px;
+}
 
-  .footerright {
-    margin-right: -20px;
+@keyframes slide {
+  from {
+    background-position: 0 0;
   }
-
-  .teamPhoto {
-    padding-top: 20px;
-    margin: -20px;
-    height: 200px;
-  }
-
-  th,
-  td {
-    color: #ff91d3;
-  }
-
-  .icon {
-    border-radius: 20px;
-  }
-
-  .footer img {
-    width: 200px;
+  to {
+    background-position: -400px 0;
   }
 }
 
-/* @media (min-width: 750px) {
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    background-image: linear-gradient(#0e1b58, #f09fd0);
-  }
-  .container-fluid {
-    background: url(./stars.png) repeat-x;
-    animation: slide 30s linear infinite;
-  }
-
-  h1 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 60pt;
-    color: #ff91d3;
-  }
-
-  h2 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 40pt;
-    margin-bottom: 60pt;
-    color: #ff91d3;
-  }
-
-  h3 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 30pt;
-    color: #ff91d3;
-  }
-
-  h4 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 20pt;
-    color: #ff91d3;
-  }
-
-  p {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    max-width: 750px;
-    color: #ff91d3;
-    margin: 0 auto;
-    margin-bottom: 30px;
-  }
-
-  @keyframes slide {
-    from {
-      background-position: 0 0;
-    }
-    to {
-      background-position: -400px 0;
-    }
-  }
-
-  .navbar a {
-    font-family: "Exo", sans-serif;
-  }
-
-  .logo {
-    width: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .logocontainer {
-    margin: 0 auto;
-    position: absolute;
-  }
-
-  .footerleft {
-    margin-left: -20px;
-  }
-
-  .footerright {
-    margin-right: -20px;
-  }
-
-  .teamPhoto {
-    margin: -20px;
-    height: 400px;
-  }
-
-  th,
-  td {
-    color: #ff91d3;
-  }
-
-  .icon {
-    border-radius: 10px;
-  }
+.logo {
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (min-width: 1199px) {
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    background-image: linear-gradient(#0e1b58, #f09fd0);
-  }
-  .container-fluid {
-    background: url(./stars.png) repeat-x;
-    animation: slide 30s linear infinite;
-  }
+.footerleft {
+  margin-left: -20px;
+}
 
-  h1 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 60pt;
-    color: #ff91d3;
-  }
+.footerright {
+  margin-right: -20px;
+}
 
-  h2 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 40pt;
-    margin-bottom: 60pt;
-    color: #ff91d3;
-  }
+.teamPhoto {
+  padding-top: 20px;
+  margin: -20px;
+  height: 200px;
+}
 
-  h3 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 30pt;
-    color: #ff91d3;
-  }
+th,
+td {
+  color: #ff91d3;
+}
 
-  h4 {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    font-size: 20pt;
-    color: #ff91d3;
-  }
+.icon {
+  border-radius: 20px;
+}
 
-  p {
-    font-family: "Exo", sans-serif;
-    text-align: center;
-    max-width: 750px;
-    color: #ff91d3;
-    margin: 0 auto;
-    margin-bottom: 30px;
-  }
-
-  @keyframes slide {
-    from {
-      background-position: 0 0;
-    }
-    to {
-      background-position: -400px 0;
-    }
-  }
-
-  .navbar a {
-    font-family: "Exo", sans-serif;
-  }
-
-  .logo {
-    width: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .logocontainer {
-    margin: 0 auto;
-    position: absolute;
-  }
-
-  .footerleft {
-    margin-left: -20px;
-  }
-
-  .footerright {
-    margin-right: -20px;
-  }
-
-  .teamPhoto {
-    margin: -20px;
-    height: 400px;
-  }
-
-  th,
-  td {
-    color: #ff91d3;
-  }
-
-  .icon {
-    border-radius: 10px;
-  } */
+.footer img {
+  width: 200px;
+}
