--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,6 @@ a {
   margin: 0 auto;
 }
 
-.rounded {
-  height: 50px;
-}
-
 h1 {
   text-align: center;
   font-size: 40pt;
@@ -74,6 +70,16 @@ p {
   }
 }
 
+.img-fluid {
+  border-radius: 20px;
+}
+
+.contribute img {
+  max-height: 75px;
+  padding-left: 20px;
+  border-radius: 20px;
+}
+
 .logo {
   width: 200px;
   display: block;
@@ -87,6 +93,10 @@ p {
 
 .footerright {
   margin-right: -20px;
+}
+
+.team h2 {
+  color: #0e1b58;
 }
 
 .teamPhoto {
